# service-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: discord-commit-notify.yml  reusable-build-ghcr.yml  reusable-discord-commit-notify.yml  reusable-release.yml  reusable-rust-quality.yml  reusable-tauri-release.yml
protos/leavepulse/auth/v1/: gateway.proto  identity.proto  minecraft.proto  users.proto
protos/leavepulse/bot/v1/: notify.proto  team_sync.proto
protos/leavepulse/common/v1/: common.proto
protos/leavepulse/edge/v1/: routes.proto
protos/leavepulse/gateway/v1/: team_sync.proto
protos/leavepulse/monitoring/v1/: history.proto  internal.proto  live.proto
protos/leavepulse/server/v1/: catalog.proto  maintenance.proto  permissions.proto  rbac.proto  team_sync.proto
protos/leavepulse/whitelist/v1/: applications.proto  config.proto  project.proto
rust/: Cargo.toml  pyproject.toml
rust/src/: ci.rs  env.rs  grpc.rs  import_resolve.rs  lib.rs  metrics.rs  motd.rs  proc.rs  python_gate.rs  scoring.rs  segments.rs  telemetry.rs  text.rs  time.rs
scripts/: generate_grpc.sh
src/service_toolkit/: __init__.py  app_factory.py  arch_linter.py  async_lookup_cache.py  async_singleton.py  awesome_errors.py  core.py  cors.py  events.py  gateway_commands.py  health.py  leader_elected_listener.py  logging.py  middleware.py  models.py  nats.py  openapi.py  prometheus.py  rate_limit.py  rbac.py  redis.py  smoke_tester.py  snowflake.py  time.py  tracing.py
src/service_toolkit/auth/: __init__.py  jwks.py  schemas.py  types.py  verifier.py
src/service_toolkit/channels/: __init__.py  base.py  registry.py  smtp.py
src/service_toolkit/db/: __init__.py  litestar.py  observability.py  sqlalchemy.py
src/service_toolkit/dev/: __init__.py  arch_linter.py  ci_runner.py  dev_migration_watcher.py  smoke_tester.py
src/service_toolkit/errors/: __init__.py
src/service_toolkit/grpc/: __init__.py  calls.py  channels.py  client.py  client_codegen.py  codegen.py  health.py  interceptors.py  jwt_forwarding.py  metrics.py  server.py  servicer.py
src/service_toolkit/ids/: __init__.py  snowflake.py
src/service_toolkit/messaging/: __init__.py  event_bus.py  events.py  gateway_commands.py  leader_elected_listener.py
src/service_toolkit/observability/: __init__.py  metrics.py  prometheus.py  prometheus_runtime.py  tracing.py
src/service_toolkit/security/: __init__.py  platform_perms_resolver.py  rbac.py
src/service_toolkit/settings/: __init__.py  config.py
src/service_toolkit/state/: __init__.py  async_singleton.py  cache.py  redis.py  snapshot_store.py
src/service_toolkit/web/: __init__.py  actor.py  app_factory.py  auth.py  cors.py  etag.py  health.py  http.py  jwt_integration.py  locale.py  middleware.py  openapi.py  projection.py  projection_decorator.py  rate_limit.py  request_ip.py  sdk_hints.py
tests/: test_arch_linter.py  test_async_lookup_cache.py  test_async_singleton.py  test_auth.py  test_ci_runner.py  test_etag.py  test_grpc_calls.py  test_grpc_channels.py  test_grpc_client.py  test_grpc_codegen.py  test_grpc_jwt_forwarding.py  test_grpc_metrics.py  test_grpc_servicer_errors.py  test_http.py  test_locale.py  test_messaging_init.py  test_nats.py  test_package_init.py  test_projection.py  test_prometheus.py  test_prometheus_runtime.py  test_rate_limit.py  test_rbac.py  test_redis.py  test_request_ip.py  test_snapshot_store.py  test_snowflake.py  test_web_auth.py
