[project]
name = "service-toolkit"
version = "0.1.0"
description = "Shared infrastructure utilities for LeavePulse services"
authors = [{ name = "THEROER", email = "theroer09@gmail.com" }]
requires-python = "~=3.14.0"
readme = "README.md"
dependencies = [
    "prometheus-client>=0.20.0,<0.21",
    "litestar>=2.17.0,<3",
]

[project.optional-dependencies]
env = ["env-settings @ git+https://github.com/THEROER/env-settings"]
nats = ["nats-py>=2.6.0,<3"]
auth = [
    "httpx>=0.27.0,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "msgspec>=0.19.0,<0.20",
]
redis = [
    "redis>=5.0.0,<8.0.0",
    "msgspec>=0.19.0,<0.20",
    "env-settings @ git+https://github.com/THEROER/env-settings",
]
sqlalchemy = ["sqlalchemy~=2.0"]
errors = ["awesome-errors @ git+https://github.com/THEROER/awesome-errors"]
[dependency-groups]
dev = [
    "nats-py>=2.6.0,<3",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "ruff>=0.13.1,<0.14",
]

[tool.hatch.build.targets.sdist]
include = ["src/service_toolkit"]

[tool.hatch.build.targets.wheel]
include = ["src/service_toolkit"]

[tool.hatch.build.targets.wheel.sources]
"src/service_toolkit" = "service_toolkit"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
