[project]
name = "service-toolkit"
version = "0.1.0"
description = "Shared infrastructure utilities for LeavePulse services"
authors = [{ name = "THEROER", email = "theroer09@gmail.com" }]
requires-python = "~=3.14.0"
readme = "README.md"
dependencies = [
    "prometheus-client>=0.20.0,<0.21",
    "litestar>=2.17.0,<3",
]

[project.optional-dependencies]
env = ["env-settings @ git+https://github.com/THEROER/env-settings"]
nats = ["nats-py>=2.6.0,<3"]
auth = [
    "httpx>=0.27.0,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "msgspec>=0.19.0,<0.20",
]
redis = [
    "redis>=5.0.0,<8.0.0",
    "msgspec>=0.19.0,<0.20",
    "env-settings @ git+https://github.com/THEROER/env-settings",
]
sqlalchemy = ["sqlalchemy~=2.0"]
errors = ["awesome-errors @ git+https://github.com/THEROER/awesome-errors"]
tracing = [
    "opentelemetry-api>=1.28.0,<2.0.0",
    "opentelemetry-sdk>=1.28.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0,<2.0.0",
    "opentelemetry-instrumentation-asgi>=0.49b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.49b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0,<1.0.0",
    "opentelemetry-instrumentation-redis>=0.49b0,<1.0.0",
]

[project.scripts]
lp-arch-lint = "service_toolkit.arch_linter:main"
lp-smoke-test = "service_toolkit.smoke_tester:main"

[dependency-groups]
dev = [
    "nats-py>=2.6.0,<3",
    "watchfiles>=1.0.0,<2",
    "sqlalchemy~=2.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "types-python-jose>=3.5.0.20250531,<4",
    "awesome-errors @ git+https://github.com/THEROER/awesome-errors",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "ruff>=0.13.1,<0.14",
    "mypy>=1.18.2,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src/service_toolkit"]

[tool.hatch.build.targets.wheel]
include = ["src/service_toolkit"]

[tool.hatch.build.targets.wheel.sources]
"src/service_toolkit" = "service_toolkit"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
